@@ -26,9 +26,9 @@ module Cucumber
         @connections << Connection.new(config)
       end
       
-      def snippet_text(step_keyword, step_name, multiline_arg_class)
+      def snippet_text(code_keyword, step_name, multiline_arg_class)
         snippets = @connections.map do |remote| 
-          remote.snippet_text(step_keyword, step_name, multiline_arg_class.to_s)
+          remote.snippet_text(code_keyword, step_name, multiline_arg_class.to_s)
         end
         snippets.flatten.join("\n")
       end
