@@ -1,3 +1,8 @@
+== In Git
+
+=== Bugfixes
+* Superflous space after step_keyword value in snippet_text message (#679 Aslak Hellesøy)
+
 == 0.9.3 (2010-10-24)
 
 === Bugfixes
